feat: 完成引入agora_rtc_engine:6.0.0插件配置

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,5 +28,9 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>12</string>
+	<key>NSCameraUsageDescription</key>
+	<string>123</string>
 </dict>
 </plist>
